// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup renders correctly 1`] = `
<div>
  <h1
    data-stylename="title"
  >
    Welcome to Hylo
  </h1>
  <p
    data-stylename="blurb"
  >
    Stay connected, organized, and engaged with your group.
  </p>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="name"
    >
      Full name
    </label>
    <TextInput
      aria-label="name"
      autoFocus={true}
      inputRef={[Function]}
      label="name"
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-stylename="submit"
    label="Sign Up"
    onClick={[Function]}
  />
  <p
    data-stylename="connect-label"
  >
    Or:
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
      signUp={true}
    />
    <FacebookButton
      onClick={[Function]}
      signUp={true}
    />
  </div>
</div>
`;

exports[`Signup renders correctly with mobile redirect 1`] = `
<div>
  <DownloadAppPortal
    url="some.url"
  />
  <h1
    data-stylename="title"
  >
    Welcome to Hylo
  </h1>
  <p
    data-stylename="blurb"
  >
    Stay connected, organized, and engaged with your group.
  </p>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="name"
    >
      Full name
    </label>
    <TextInput
      aria-label="name"
      autoFocus={true}
      inputRef={[Function]}
      label="name"
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-stylename="submit"
    label="Sign Up"
    onClick={[Function]}
  />
  <p
    data-stylename="connect-label"
  >
    Or:
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
      signUp={true}
    />
    <FacebookButton
      onClick={[Function]}
      signUp={true}
    />
  </div>
</div>
`;
